Revert "add path"
This reverts commit b780ab6d54bfcff3d7aefdb83a99460693188baa.

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <title>ShopShop</title>
+    <!-- <script src="js/vconsole.min.js"></script>
+    <script>
+      // init vConsole
+      var vConsole = new VConsole();
+      console.log('Hello world');
+    </script> -->
   </head>
   <body>
     <noscript>
